--- a/css/contacto.css
+++ b/css/contacto.css
@@ -11,12 +11,12 @@ body {
 }
 #cuerpo {
     margin: 0 auto;
-    width: 800px;
+    width: 1000px;
     height: 900px;
 }
 
 #contacto {
-    padding-top: 200px;
+    padding-top: 180px;
     width: 100%;
     height: 100%;
 }
@@ -46,7 +46,7 @@ body {
     background-color: transparent;
 }
 
-table {    
+#table_form {    
     width: 425px;
     height: 250px;
     float: right;   
@@ -62,6 +62,24 @@ table {
 }
 td {
     padding: 5px 10px;
+}
+
+#img_contacto {
+   float: left;
+    width: 45%;
+    height: 50%;
+    background-size: contain;
+    background-image: url(../images/contacto/contacto.png);
+    background-repeat: no-repeat;
+}
+
+#info_contacto{
+    float: right;
+    width: 425px;
+}
+
+textarea{
+    resize: none;
 }
 
 
