Se modifico la funcion para el scroll y se cambiaron imagenes

--- a/css/component.css
+++ b/css/component.css
@@ -356,7 +356,7 @@ h3{
 }
 footer{
     background-image: url(../images/header/header.jpg);
-    text-align: justify;
+    text-align: center;
     height: 80px;
     width: 100%;    
     color: #FFF;   
