--- a/css/salidas_pedagogicas.css
+++ b/css/salidas_pedagogicas.css
@@ -24,6 +24,33 @@
     background-image: url(../images/galeria/patron.png);
 }
 
+#der_coleccion,#izq_coleccion{
+    height: 60px;
+    width: 69px;  
+    float: left;
+    padding: 0;
+    background-image: url(../images/galeria/galeria1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#der_coleccion{
+    -moz-transform: scaleX(-1); /* Firefox */
+    -o-transform: scaleX(-1); /* Opera */
+    -webkit-transform: scaleX(-1); /* Chrome y Safari */
+    transform: scaleX(-1); /* w3org */
+    filter: der; /* Internet Explorer */
+}
+
+#texto_coleccion{
+    float: left;  
+    margin-top: 2px;
+    padding-top: 10px;  
+    text-align: center;
+    height: 35px;
+    width: 200px;
+    background-image: url(../images/galeria/patron_galeria.png);
+}
+
 #titulo_pedagogicas,#titulo_coleccion{    
    color: rgb(2, 2, 2);
     width: 340px;
